--- a/Python_Basic_Essentials.ipynb
+++ b/Python_Basic_Essentials.ipynb
@@ -709,6 +709,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n",
+      "36\n",
+      "48\n"
+     ]
+    }
+   ],
+   "source": [
+    "def myfunc(n):\n",
+    "  return lambda a : a * n\n",
+    "\n",
+    "mydoubler = myfunc(2)\n",
+    "mytripler = myfunc(3)\n",
+    "myf = myfunc(4)\n",
+    "\n",
+    "\n",
+    "print(mydoubler(12))\n",
+    "print(mytripler(12))\n",
+    "print(myf(12))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
